# oden

./: .dockerignore  .gitattributes  .gitignore  .mailmap  .travis.yml  BUILD.md  CHANGELOG.md  CREDITS.md  Dockerfile  LICENSE.md  Makefile  README.md  Setup.hs  compiler-test.rkt  compiler.rkt  explode-test.rkt  explode.rkt  index.html  inferencer-test.rkt  inferencer.rkt  info.rkt  main.rkt  oden.cabal  protocols.txt  repl.rkt  scratch.go  scratch.km  slices.oden  stack.yaml  types-test.rkt  types.rkt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
cli/: Main.hs
cli/Oden/: CLI.hs
cli/Oden/CLI/: Build.hs  Lint.hs  PrintPackage.hs  Run.hs
crap/: std.go
distribution/: oden.sh
doc/: compiler-overview.md
doc/user-guide/: .gitignore  Makefile  README.md  SUMMARY.md  book.json  compiling.md  installation.md  oden-user-guide.cabal  stack.yaml  the-oden-playground.md  writing-oden-code.md
doc/user-guide/filters/include-code/: Main.hs
doc/user-guide/js/: user-guide.js
doc/user-guide/src/: bibliography.bib  getting-started.md  index.md  installation.md  preface.md  preface.tex  template.html  template.tex  the-language.md  workflow.md
doc/user-guide/src/filters/: IncludeCode.hs  include-code-html.sh  include-code-latex.sh
doc/user-guide/src/listings/: hello-world-build.html  hello-world-go-build-and-run.html  hello-world-run-directly.html  hello-world.oden  oden-cmd-help.html  package-example.oden  syntax-fully-qualified-name.html  syntax-function-application.html  syntax-function-expression.html  syntax-function-type.html  syntax-go.html  syntax-import-foreign-declaration.html  syntax-import-native-declaration.html  syntax-let.html  syntax-package-declaration.html  syntax-package-member-access.html  syntax-protocol-definition.html  syntax-protocol-implementation.html  syntax-receive.html  syntax-record-field-access.html  syntax-record-literal.html  syntax-record-type-extension.html  syntax-record-type.html  syntax-send.html  syntax-slice-literal.html  syntax-subscript.html  syntax-tuple-literal.html  syntax-tuple-type.html  syntax-value-definition.html
doc/user-guide/src/site/: footer.html  head.html  highlight.css  logo.html  pdf-links.html
doc/user-guide/src/site/js/: user-guide.js
doc/user-guide/src/site/styles/: crimson.css  ubuntu-mono.css  user-guide.css
doc/user-guide/styles/: pdf.css  user-guide.css
doc/user-guide/the-language/: basic-literals.md  blocks.md  control-flow.md  functions.md  index.md  let-bindings.md  operators.md  protocols.md  records.md  slices.md  tuples.md  type-variables.md  unit.md
doc/user-guide/workflow/: compiling.md  playground.md  running.md
docs/: README.md  SUMMARY.md  book.json  compiling.md  contributing.md  forms.md  goals.md  installation.md  language-reference.md  language.md  motivation-and-goals.md  repl.md  type-system.md  writing-kashmir-code.md  writing-oden-code.md
docs/styles/: website.css
examples/: define-function.km  lib.km  thunk.km
examples/src/: definitions.km  lib.km  main.km  numbers.km  out-of-order.km  recursion.km
examples/src/submodule/: utils.km
experiments/: constructors.go  factorial.go  factorial.oden  main.go  pingpong.go  pingpong.km  pingpong.scm  pingpong2.go  pingpong2.oden  pkg_scan.go  scratch.km  simple.go  simple.scm
experiments/not-working/: constructors.oden  simple.km  streams.oden  typevars.oden
experiments/working/src/: definitions.oden  lib.oden  main.oden  numbers.oden  pair.oden  pairlet.oden
lib/: graph.rkt
lib/miniKanren/: LICENSE
minikanren/: mk.rkt  mk.scm  racket-compat.rkt
odenc/: Main.hs  compiler.rkt  explode.rkt  go-backend.rkt  inferencer.rkt  main.rkt  polymorphic.rkt  reader-test.rkt  reader.rkt  scanner.rkt  source-file.rkt  source-pkg.rkt
odenc/compiler/: compiled-pkg.rkt  expand-monomorphed-let.rkt  explode.rkt  get-non-local-references.rkt  get-substitutions.rkt  instantiate-p-def.rkt  instantiate.rkt  make-monomorph-name.rkt  monomorph.rkt  monomorphed-binding.rkt
odenc/core/: valid-identifier.rkt  validate-form.rkt
odenc/inferencer/: arith-operatoro.rkt  erroro.rkt  generalizeo.rkt  infer-defo.rkt  infero.rkt  instantiateo.rkt  lookup-varo.rkt  lookupo.rkt
odeni/: Main.hs
regression-test/: run-regression-tests.sh
regression-test/src/: church.oden  church.oden.expected.txt  importforeign.oden  letreuse.oden  main.oden  point.oden  point.oden.expected.txt  records-infer-multiple-fields.oden  records-infer-multiple-fields.oden.expected.txt  records.oden  records.oden.expected.txt  rowvar.oden  structs.oden  structs.oden.expected.txt  typealias.oden
regression-test/src/blocks/: main.oden  main.oden.expected.txt
regression-test/src/channels/: gostring.oden  receive.oden  receive.oden.expected.txt
regression-test/src/comments/: main.oden  main.oden.expected.txt
regression-test/src/definitions/: main.oden
regression-test/src/factorial/: main.oden
regression-test/src/fibonacci/: main.oden
regression-test/src/go/: gostring.oden
regression-test/src/higherorder/: main.oden
regression-test/src/imports/: foo.oden  main.oden  main.oden.expected.txt
regression-test/src/let/: main.oden
regression-test/src/letpoly/: main.oden
scratch/: protocols.oden
src/: compiled-pkg.rkt  compiler-test.rkt  compiler.rkt  explode-test.rkt  explode.rkt  go-backend-test.rkt  go-backend.rkt  inferencer-test.rkt  inferencer.rkt  pkg-source.rkt  reader-test.rkt  reader.rkt  scanner-test.rkt  scanner.rkt  source-pkg.rkt
src/Oden/: Backend.hs  Compiler.hs  Core.hs  Desugar.hs  Env.hs  Environment.hs  EnvironmentConversion.hs  Explode.hs  Go.hs  Identifier.hs  Imports.hs  Infer.hs  Lexer.hs  Metadata.hs  Output.hs  Parser.hs  Path.hs  Predefined.hs  Pretty.hs  QualifiedName.hs  Scanner.hs  Scope.hs  SourceFile.hs  SourceInfo.hs  Substitution.hs  Syntax.hs
src/cmd/: kmc.rkt  odenc.rkt
src/odenc/: Main.hs
src/odeni/: Main.hs
test/: Lint.hs
test/Oden/: Assertions.hs  CompilerSpec.hs  DesugarSpec.hs  ExplodeSpec.hs  ImportsSpec.hs  InferSpec.hs  ParserSpec.hs  SyntaxSpec.hs
tools/: change_osx_install_names.sh  get_os.sh
(+146 files in other folders)
