name:                oden
version:             0.3.0-alpha5
license:             MIT
license-file:        LICENSE.md
author:              Oskar Wickström
maintainer:          oskar.wickstrom@gmail.com
build-type:          Simple
extra-source-files:
  README.md,
  go/src/oden/importer/main.go,
  go/src/oden/importer/types.go
cabal-version:       >=1.10

library
  build-depends:
    base          == 4.*,
    pretty        >= 1.1   && <1.2,
    parsec        >= 3.1   && <3.2,
    text          >= 1.2   && <1.3,
    containers    >= 0.4   && <0.6,
    mtl           >= 2.2   && <2.3,
    transformers  >= 0.4.2 && <0.5,
    aeson         >= 0.10,
    pcre-heavy    >= 1.0,
    bytestring,
    unordered-containers,
    vector,
    directory,
    unix,
    filepath
  exposed-modules:
    Oden.Backend,
    Oden.Backend.Go,
    Oden.Compiler,
    Oden.Compiler.Instantiate,
    Oden.Compiler.Monomorphization,
    Oden.Compiler.TypeEncoder
    Oden.Compiler.Validation,
    Oden.Core,
    Oden.Core.Operator,
    Oden.Core.Untyped,
    Oden.Env,
    Oden.Explode,
    Oden.Identifier,
    Oden.Infer,
    Oden.Infer.Substitution,
    Oden.Infer.Subsumption,
    Oden.Go,
    Oden.Go.Types,
    Oden.Lexer,
    Oden.Output,
    Oden.Output.Backend,
    Oden.Output.Compiler,
    Oden.Output.Explode,
    Oden.Output.Go,
    Oden.Output.Infer,
    Oden.Output.Instantiate,
    Oden.Output.Parser,
    Oden.Parser,
    Oden.Predefined,
    Oden.Scope,
    Oden.Syntax,
    Oden.Scanner,
    Oden.Type.Monomorphic,
    Oden.Type.Polymorphic
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -fPIC -Wall dist/go-lib/importer.a -fno-warn-orphans

executable odenc
  build-depends:
      base          == 4.*,
      text          >= 1.2   && <1.3,
      mtl           >= 2.2   && <2.3,
      transformers  >= 0.4.2 && <0.5,
      containers    >= 0.4   && <0.6,
      filepath,
      directory,
      oden
  default-language:    Haskell2010
  main-is:             Main.hs
  hs-source-dirs:      odenc

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  default-language: Haskell2010
  hs-source-dirs: test
  build-depends:
    base          == 4.*,
    HUnit,
    hspec         == 2.*,
    QuickCheck,
    parsec        >= 3.1   && <3.2,
    text          >= 1.2   && <1.3,
    mtl           >= 2.2   && <2.3,
    transformers  >= 0.4.2 && <0.5,
    containers    >= 0.4   && <0.6,
    oden
  ghc-options: -Wall -fno-warn-orphans
