name:                oden
version:             0.3.0
license:             MIT
license-file:        LICENSE.md
author:              Oskar Wickström
maintainer:          oskar.wickstrom@gmail.com
build-type:          Custom
extra-source-files:
  README.md,
  go/src/oden/cmd/importer/importer.go,
  go/src/oden/importer/objects.go,
  go/src/oden/importer/types.go
cabal-version:       >=1.10

library
  build-depends:
    base          == 4.*,
    pretty        >= 1.1   && <1.2,
    parsec        >= 3.1   && <3.2,
    text          >= 1.2   && <1.3,
    containers    >= 0.4   && <0.6,
    mtl           >= 2.2   && <2.3,
    transformers  >= 0.4.2 && <0.5,
    aeson,
    pcre-heavy    >= 1.0,
    wl-pprint     >= 1.2,
    bytestring,
    unordered-containers,
    vector,
    directory,
    unix,
    filepath
  exposed-modules:
    Oden.Backend,
    Oden.Backend.Go,
    Oden.Compiler,
    Oden.Compiler.Environment,
    Oden.Compiler.Instantiate,
    Oden.Compiler.Monomorphization,
    Oden.Compiler.Resolution,
    Oden.Compiler.TypeEncoder,
    Oden.Compiler.Validation.Untyped,
    Oden.Compiler.Validation.Typed,
    Oden.Compiler.LiteralEval,
    Oden.Core.Typed,
    Oden.Core.Definition,
    Oden.Core.Expr,
    Oden.Core.Operator,
    Oden.Core.Monomorphed,
    Oden.Core.Package,
    Oden.Core.ProtocolImplementation,
    Oden.Core.Traversal,
    Oden.Core.Untyped,
    Oden.Environment,
    Oden.Explode,
    Oden.Identifier,
    Oden.Imports,
    Oden.Infer,
    Oden.Infer.ConstraintCollection,
    Oden.Infer.Environment,
    Oden.Infer.Substitution,
    Oden.Infer.Subsumption,
    Oden.Infer.Unification,
    Oden.Go.AST,
    Oden.Go.Identifier,
    Oden.Go.Importer,
    Oden.Go.Pretty,
    Oden.Go.Type,
    Oden.Lexer,
    Oden.Metadata,
    Oden.Output,
    Oden.Output.Backend,
    Oden.Output.Compiler,
    Oden.Output.Compiler.Resolution,
    Oden.Output.Compiler.Validation.Untyped,
    Oden.Output.Compiler.Validation.Typed,
    Oden.Output.Explode,
    Oden.Output.Go,
    Oden.Output.Infer,
    Oden.Output.Instantiate,
    Oden.Output.Parser,
    Oden.Output.Unification,
    Oden.Parser,
    Oden.Predefined,
    Oden.Pretty,
    Oden.QualifiedName,
    Oden.SourceInfo,
    Oden.Syntax,
    Oden.Scanner,
    Oden.Type.Kind,
    Oden.Type.Monomorphic,
    Oden.Type.Polymorphic,
    Oden.Type.Signature,
    Oden.Type.Traversal
  default-language:    Haskell2010
  hs-source-dirs:      src
  extra-libraries:     importer
  ghc-options:         -Wall -fno-warn-orphans

executable oden-exe
  other-modules:
    Paths_oden,
    Oden.CLI,
    Oden.CLI.Build,
    Oden.CLI.Lint,
    Oden.CLI.PrintPackage,
    Oden.CLI.Run
  build-depends:
    base          == 4.*,
    text          >= 1.2   && <1.3,
    mtl           >= 2.2   && <2.3,
    pretty        >= 1.1   && <1.2,
    transformers  >= 0.4.2 && <0.5,
    containers    >= 0.4   && <0.6,
    wl-pprint     >= 1.2,
    temporary,
    process,
    filepath,
    directory,
    oden
  default-language:    Haskell2010
  main-is:             Main.hs
  hs-source-dirs:      cli
  extra-libraries:     importer
  ghc-options:         -Wall -fno-warn-orphans

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Main.hs
  default-language: Haskell2010
  hs-source-dirs: test
  build-depends:
    base          == 4.*,
    HUnit,
    hspec         == 2.*,
    QuickCheck,
    parsec        >= 3.1   && <3.2,
    text          >= 1.2   && <1.3,
    mtl           >= 2.2   && <2.3,
    pretty        >= 1.1   && <1.2,
    transformers  >= 0.4.2 && <0.5,
    containers    >= 0.4   && <0.6,
    wl-pprint     >= 1.2,
    nicify-lib    == 1.*,
    Diff          >= 0.3,
    oden
  extra-libraries: importer
  ghc-options:
    -Wall -fno-warn-orphans -fno-warn-missing-signatures

test-suite lint
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Lint.hs
  build-depends:
    base,
    hlint == 1.*
  extra-libraries: importer
