name:                oden-user-guide
version:             0.1.0.0
synopsis:            The Oden User Guide
homepage:            https://oden-lang.org/user-guide/latest/
license:             MIT
author:              Oskar Wickström
maintainer:          oskar.wickstrom@gmail.com
copyright:           2015 Oskar Wickström
category:            Documentation
build-type:          Simple
cabal-version:       >=1.10

executable include-code
  hs-source-dirs:      filters/include-code
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , filepath
                     , process
                     , pcre-heavy >= 1.0
                     , pandoc >= 1.16
                     , pandoc-types >= 1.16
                     , pandoc-citeproc >= 0.9
  default-language:    Haskell2010
